<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">QR Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="qr_generator">QR Generator</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_qrscanner">QR Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_qr_scanner">QR Scanner</string>
    <string name="title_activity_qr_generator">QR Generator</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="Settings">Settings</string>
    <string name="QRScanner">QR Scanner</string>
    <string name="QRGenerator">QR Generator</string>
    <string name="History">History</string>
    <string name="slide1_heading">Welcome</string>
    <string name="slide1_text">Welcome to Privacy friendly QR scanner. This tutorial will cover the most important things you need to know.</string>
    <string name="slide2_heading">What are the features?</string>
    <string name="text_slide2">With this app you can both scan and create QR codes.</string>
    <string name="slide3_heading">More features</string>
    <string name="text_slide3">The QR code you scanned can be saved in History. Furthermore you can share it or copy it.</string>
    <string name="wecome">Welcome</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="help_">Help</string>
    <string name="tutorial">Tutorial</string>
    <string name="about_author">Authors: </string>
    <string name="about_author_names" translatable="false">Christopher Beckmann, Bassel Hanna, Philipp Rack, Tobias Länge</string>
    <string name="about_author_string">%s and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This is one of many privacy-friendly apps developed by SECUSO. Source code licensed GPLv3. Images copyright Karlsruhe Institute of Technology and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github"><a href="https://github.com/SecUSo/privacy-friendly-qr-scanner">GitHub-Repo</a></string>
    <string name="url_secuso"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="about_libraries">Used libraries:</string>
    <string name="lib_url" translatable="false"><a href="https://github.com/zxing">ZXing</a></string>
    <string name="app_name_long">Privacy Friendly QR Scanner</string>
    <string name="version_number">Version v%s</string>
    <string name="delete_items">Delete items</string>
    <string name="scan_text">Place this window atop the code you want to decode.</string>
    <string name="action_clear">Clear History</string>
    <string name="cannot_clear">The history is already empty</string>
    <string name="knowRisks">I checked the link and want to visit the website.</string>
    <string name="domain">Domain</string>
    <string name="urlExplanation">QR-Codes can contain links, that lead to a faked website, which can compromise your personal data (phishing website) or transfer malware (e.g. viruses) to your device.\n\nAs a consequence you should <b>check</b> if the following link is the one you expected:</string>
    <string name="further_info"><a href="https://secuso.aifb.kit.edu/betr-nachrichten-flyer2EN">Information</a> on how to check links.</string>
    <string name="delete_history">Do you want to delete the history?</string>
    <string name="ok">Okay</string>
    <string name="element_removed">Element removed.</string>
    <string name="conform_url">Please confirm, that you checked the link.</string>
    <string name="wifi_explanation">This version of the app cannot connect to WIFI networks automatically due to the permission that would be needed. Below are some details about the network.</string>
    <string name="encryption">Encryption</string>
    <string name="action_about">About</string>
    <string name="history_disabled">History turned off</string>
    <string name="to">Recipient:</string>
    <string name="usability_hint2">If you cannot scan a code, increase the distance between the scanner and the code.</string>
    <string name="description_contact">The QR-Code you scanned contains contact information. In order to <i>import</i> it into your address book, click Proceed.</string>
    <string name="description_email">The QR-Code you scanned contains an email address. In order to <i>send an email</i> or <i>add it to a contact</i>, click Proceed.</string>
    <string name="description_send_email">The QR-Code you scanned contains a filled email. In order to <i>send</i> it or <i>add the address a contact</i>, click Proceed.</string>
    <string name="description_product">The code you scanned contains a product code. In order to <i>search the web</i> for product information, click Proceed.</string>
    <string name="description_tel">The QR-Code you scanned contains a phone number. In order to <i>start a call</i> or <i>add it to a contact</i>, just click Proceed.</string>
    <string name="description_sms">The QR-Code you scanned contains an SMS. In order to <i>send</i> the SMS or <i>add the number to a contact</i>, click Proceed.</string>
    <string name="description_text">The QR-Code you scanned contains plain text. In order to <i>search the web</i> for information, click Proceed.</string>
    <string name="choose_action">Proceed</string>
    <string name="abort_action">Abort </string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="choose_action_url">Proceed</string>
    <string name="abort_action_url">Abort</string>
    <string-array name="text_array">
        <item>Search on Web</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="email_array">
        <item>Send Email</item>
        <item>Add to Contacts</item>
    </string-array>
    <string-array name="vcard_array">
        <item>Add to Contacts</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="calendar_array">
        <item>Add to Calendar</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="send_email_array">
        <item>Send Email</item>
        <item>Add to Contacts</item>
    </string-array>
    <string-array name="sms_array">
        <item>Send SMS</item>
        <item>Call Number</item>
        <item>Add to Contacts</item>
    </string-array>
    <string-array name="mms_array">
        <item>Send MMS</item>
        <item>Call Number</item>
        <item>Add to Contacts</item>
    </string-array>
    <string-array name="tel_array">
        <item>Call Number</item>
        <item>Add to Contacts</item>
    </string-array>
    <string-array name="geo_array">
        <item>Open Maps App</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="url_array">
        <item>Visit URL</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="product_array">
        <item>Search on Web</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="wifi_array">
        <item>Copy Password</item>
        <item>Add WiFi network</item>
        <item>Do nothing</item>
    </string-array>
    <string-array name="history_array">
        <item>Copy to clipboard</item>
        <item>Delete entry</item>
    </string-array>
    <string-array name="generator_array">
        <item>Text</item>
        <item>E-mail</item>
        <item>URL</item>
        <item>Phone number</item>
        <item>SMS</item>
        <item>Geo location</item>
        <item>MeCard</item>
        <item>BizCard</item>
        <item>Wifi</item>
        <item>VCard</item>
        <item>Market</item>
    </string-array>
    <string-array name="content_types">
        
        <item>UNDEFINED</item>
        <item>Text</item>
        <item>E-Mail</item>
        <item>Phone number</item>
        <item>SMS</item>
        <item>MMS</item>
        <item>URL</item>
        <item>Wifi</item>
        <item>VCard</item>
        <item>MeCard</item>
        <item>BizCard</item>
        <item>Market</item>
        <item>Contact</item>
        <item>Geo location</item>
        <item>Address book</item>
        <item>Product</item>
        <item>Calendar</item>
        <item>ISBN</item>
        <item>Vehicle Identification Number (VIN)</item>
    </string-array>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="noname">No name specified</string>
    <string name="title_activity_result_url">Link found</string>
    <string name="title_activity_result_text">Text found</string>
    <string name="title_activity_result_sms">SMS found</string>
    <string name="title_activity_result_email">Email address found</string>
    <string name="title_activity_result_send_email">Email found</string>
    <string name="title_activity_result_product">Product found</string>
    <string name="title_activity_result_tel">Phone number found</string>
    <string name="title_activity_result_wifi">Wi-Fi found</string>
    <string name="title_activity_result_contact">Contact found</string>
    <string name="action_help">Help</string>
    <string name="welcome_text">Privacy friendly QR scanner allows scanning barcodes and QR-codes with various content with a minimal set of permissions, and helps in the detection of malicious links.</string>
    <string name="welcome">Welcome</string>
    <string name="viewhelp">View Help</string>
    <string name="help_permission1_description">The app requires the camera permission, which is used to scan barcodes and qr codes via camera.</string>
    <string name="help_permission1_heading">Camera</string>
    <string name="help_privacy_heading">What permissions are required by PRIVACY FRIENDLY QR Scanner?</string>
    <string name="help_category_example">The scanning does not work, what can I do?</string>
    <string name="help_overview_heading">What is PRIVACY FRIENDLY QR Scanner?</string>
    <string name="help_intro">With PRIVACY FRIENDLY QR Scanner you can scan barcodes and qr-codes with various contents.</string>
    <string name="help_whatis">What is PRIVACY FRIENDLY QR Scanner?</string>
    <string name="help_whatis_answer">With PRIVACY FRIENDLY QR Scanner you can scan/generate barcodes and qr-codes with various contents. Also You can copy/share scanned QR code with other applications, furthermore you can save the generated QR code in the gallery and share it as well.</string>
    <string name="help_usability">The scanning does not work, what can I do?</string>
    <string name="help_usability_answer">If you cannot scan a code, increase the distance between the scanner and the code.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="text_enter">The text you want to encode</string>
    <string name="hello_world">Hello World</string>
    <string name="generate">generate</string>
    <string name="company">Company</string>
    <string name="lastname">Lastname</string>
    <string name="title">Title</string>
    <string name="city">City</string>
    <string name="postal_address">Postal address</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="firstname">Firstname</string>
    <string name="street_name_and_number">Street name and number</string>
</resources>