<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_overview_heading">
        <Preference
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/help_intro"
            android:title="" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_category_example">
        <Preference
            android:selectable="false"
            android:summary="@string/usability_hint2"
            android:title="" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_privacy_heading">
        <Preference
            android:selectable="false"
            android:summary="@string/help_permission1_description"
            android:title="@string/help_permission1_heading" />
    </PreferenceCategory>

</PreferenceScreen>