<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_view_as_list"
            android:title="@string/history" />
    </group>

    <group android:id="@+id/nav_group_add"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/action_about" />
    </group>
</menu>
