<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.secuso.privacyFriendlyCodeScanner.qrscanner.QRGenerating.MeCardEnterActivity">

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editLastname"
        android:layout_below="@+id/editName"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/postal_address"
        android:inputType="textPostalAddress" />
    <Button
        android:id="@+id/generate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/button_fullwidth"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_margin="1dp"
        android:text="Generate"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editPostal"
        android:layout_below="@+id/editCity"
        android:ems="10"
        android:hint="@string/street_name_and_number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editPhone"
        android:layout_below="@+id/editPhone"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editCompany"
        android:layout_alignStart="@+id/editPostal"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/generate"
        android:layout_alignStart="@+id/editTilte"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/company"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/lastname" />
</RelativeLayout>

