<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fillViewport="true"
        android:nestedScrollingEnabled="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/hints4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/urlExplanation"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textDomain"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/domain"
                android:textIsSelectable="true"
                android:textSize="15sp" />

            <CheckBox
                android:id="@+id/checkBoxKnowRisks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:checked="false"
                android:longClickable="false"
                android:text="@string/knowRisks"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/further_info"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
