<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/generate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:layout_marginBottom="42dp"
        android:layout_toRightOf="@+id/imageView"
        android:layout_weight="1"
        android:background="@drawable/button_fullwidth"
        android:padding="1dp"
        android:text="@string/generate"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/hello_world"
        android:inputType="textMultiLine|textCapSentences" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/text_enter" />


</RelativeLayout>
