<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnCancel"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayoutContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:id="@+id/textLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/result_text_contact"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#014164"
        android:padding="5dp"
        android:text="@string/choose_action"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_margin="1dp" />

    <ImageView
        android:layout_centerInParent="true"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:id="@+id/imageView"
        android:paddingLeft="2dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#014164"
        android:padding="5dp"
        android:text="@string/abort_action"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_margin="1dp" />

</RelativeLayout>